libs/core/proc_macros/selectable_fields/tests/ui/tuple_struct.stderr
error: proc-macro derive panicked
 --> tests/ui/tuple_struct.rs:3:10
  |
3 | #[derive(SelectableFields)]
  |          ^^^^^^^^^^^^^^^^
  |
  = help: message: Only named fields are supported
