libs/core/proc_macros/selectable_fields/tests/ui/tuple_struct.rs
use core_proc_macros::SelectableFields;

#[derive(SelectableFields)]
pub struct Wrapper(String, i32);  // Tuple struct - only named fields supported

fn main() {}
